# umt-hackathon

./: .gitignore
Frontend/: BACKEND_INTEGRATION.md  CODE_ANALYSIS_REPORT.md  IMPLEMENTATION_SUMMARY.md  README.md  REBUILD_STATUS.md  REQUIREMENTS_ANALYSIS.md  index.html  package-lock.json  package.json  tailwind.config.js
Frontend/src/: App.jsx  index.css
Frontend/src/api/: applications.js  auth.js  axios.js  chat.js  jobs.js  profile.js  upload.js  websocket.js
Frontend/src/components/: Footer.jsx  JobCard.jsx  JobCardFinder.jsx  Loader.jsx  Navbar.jsx  RoleSwitcher.jsx  Sidebar.jsx
Frontend/src/pages/: Applications.jsx  Chat.jsx  DashboardFinder.jsx  DashboardSeeker.jsx  ForgotPassword.jsx  JobApplicants.jsx  JobDetails.jsx  JobList.jsx  Landing.jsx  Login.jsx  Profile.jsx  Register.jsx  ResetPassword.jsx  VerifyEmail.jsx
Frontend/src/services/: authService.js  chatService.js  jobService.js  notificationService.js
Frontend/src/utils/: matchScore.js
backend/: .env  EMAIL_SETUP.md  main.py  pyproject.toml  requirements.txt
backend/core/: email.py  security.py
backend/database/: connection.py
backend/models/: chat_model.py  user_model.py
backend/routes/: application_routes.py  auth.py  auth_routes.py  chat_routes.py  google_routes.py  job_routes.py  profile_routes.py  upload_routes.py  websocket_routes.py
backend/utils/: auth_utils.py
